--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,15 +1,9 @@
-{% include 'recipes/partials/head.html' %}
+{% extends 'global/base.html' %}
 
-<body>
-    {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
+{% block title %}Receita Tal | {% endblock title %}
 
-    <main class="main-content-container">
-        <div class="main-content main-content-detail container">
-            {% include 'recipes/partials/recipes.html' %}
-
-    </main>
-    {% include 'recipes/partials/footer.html' %}
-</body>
-
-</html>
+{% block content %}
+<div class="main-content main-content-detail container">
+    {% include 'recipes/partials/recipes.html' %}
+</div>
+{% endblock content %}
